tests/NormalTests/paczka1/fuzzy1/15716947.err
Error in line 1: bcxgfXbgQ A920 21,8
Error in line 8: S17 A981 -1,8
Error in line 19: Xc1 S165 44,6
Error in line 26: Zhi A981 30,12
Error in line 24: aCrgJzL0 S165 37,7
Error in line 35: IjHV S17 92,9
